# worst_webapp

./: .env.example  .eslintrc.cjs  .gitignore  README.md  docker-compose.yaml  env.d.ts  package-lock.json  package.json  pyproject.toml  vite.config.ts
apiserver/: .model.json  api_router.py  db.py  dependencies.py  main.py  models.py  search.py  service.py  worstrouter.py
apiserver/routers/: attachments.py  models.py  reports.py  search.py  sql.py
apiserver/tests/: test_0.py  test_1_account.py  test_1_admin_users.py  utils.py
backend/: db.py  dependencies.py  main.py  models.py
backend/routers/: accounts.py  notes.py  projects.py  tasks.py
backend/tests/: test_accounts.py  test_admin_users.py  test_notes.py  test_projects.py  test_tasks.py  utils.py
frontend/: index.html  vite.config.js
misc/: worst.ddl.sql  worst.search.txt  worst_crm.ddl.sql
src/: main.ts  types.ts
src/components/: FabMarkEdit.vue  ModalNewInput.vue  TableLiteTs.vue
src/layout/: AppHeader.vue
src/router/: index.ts
src/stores/: authStore.ts
src/utils/: utils.ts
src/views/: AdminView.vue  CallbackView.vue  InstanceView.vue  LoginView.vue  TableView.vue
storage/: worst_crm.ddl.sql
web/: index.html
webapp/: db.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
webapp/src/: App.vue  main.ts  types.ts
worst_crm/: api_router.py  db.py  dependencies.py  main.py  models.py  service.py  test_db.py  test_main.py
worst_crm/routers/: accounts.py  admin.py  artifact_schemas.py  artifacts.py  contacts.py  notes.py  opportunities.py  projects.py  status.py  tasks.py  test_accounts.py
worst_crm/tests/: test_0.py  test_1_artifact_schemas.py  test_2_opportunities.py  test_3_artifact.py  test_3_projects.py  test_4_tasks.py  test_5_account_notes.py  test_5_opportunity_notes.py  test_5_project_notes.py  test_accounts.py  test_notes.py  (+7 more)
(+89 files in other folders)
