[tool.poetry]
name = "worst_crm"
version = "0.1.0"
description = "WorstCRM is the worst CRM software."
authors = ["Fabio Ghirardello"]
readme = "README.md"
packages = [{include = "worst_crm"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg = {extras = ["pool"], version = "^3.1.8"}
psycopg-binary = "^3.1.8"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0.post2"
requests = "^2.30.0"
validators = "^0.20.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.3.1"
httpx = "^0.24.0"
minio = "^7.1.14"
faker = "^18.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
