[tool.poetry]
name = "worst"
version = "0.1.0"
description = "Worst"
authors = ["Fabio Ghirardello"]
readme = "README.md"
packages = [{include = "apiserver"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {extras = ["pool"], version = "^3.1.8"}
psycopg-binary = "^3.1.8"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0.post2"
requests = "^2.30.0"
validators = "^0.20.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = {extras = ["all"], version = "^0.100.0"}
sqlalchemy = "^2.0.19"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
meilisearch = "^0.29.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.3.1"
httpx = "^0.24.0"
minio = "^7.1.14"
faker = "^18.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
